=== HEAD

* Add mssql_emulate_lateral_with_apply extension for emulating LATERAL queries using CROSS/OUTER APPLY (jeremyevans)

* Support LATERAL queries via Dataset#lateral (jeremyevans)

* Add pg_loose_count Database extension, for fast approximate counts of PostgreSQL tables (jeremyevans)

* Add from_block Database extension, for having Database#from block affect FROM instead of WHERE (jeremyevans)

* Support :cursor_name option in postgres adapter Dataset#use_cursor (heeringa, jeremyevans) (#696)

* Fix placeholder literal strings when used with an empty placeholder hash (trydionel, jeremyevans) (#695)

=== 4.1.1 (2013-08-01)

* Fix select_map, select_order_map, and single_value methods on eager_graphed datasets (jeremyevans)

=== 4.1.0 (2013-08-01)

* Support :inherits option in Database#create_table on PostgreSQL, for table inheritance (jeremyevans)

* Handle dropping indexes for schema qualified tables on PostgreSQL (jeremyevans)

* Add Database#error_info on PostgreSQL 9.3+ if pg-0.16.0+ is used, to get a hash of metadata for a given database exception (jeremyevans)

* Allow prepared_statements plugin to work with instance_filters and update_primary_key plugins (jeremyevans)

* Support deferrable exclusion constraints on PostgreSQL using the :deferrable option (mfoody) (#687)

* Make Database#run and #<< accept SQL::PlaceholderLiteralString values (jeremyevans)

* Deprecate :driver option in odbc adapter since it appears to be broken (jeremyevans)

* Support :drvconnect option in odbc adapter for supplying the ODBC connection string directly (jeremyevans)

* Support mysql2 0.3.12+ result streaming via Dataset#stream (jeremyevans)

* Convert Java::JavaUtil::HashMap to ruby Hash in jdbc adapter, for better handling of PostgreSQL hstore type (jeremyevans) (#686)

* Raise NoMatchingRow if calling add_association with a primary key value that doesn't match an existing row (jeremyevans)

* Allow PostgreSQL add_constraint to support :not_valid option (jeremyevans)